# cpl

./: .gitignore  .pre-commit-config.yaml  Explaination of the BCE loss.docx  LICENSE  README.md  environment_cpu.yaml  environment_gpu.yaml  pyproject.toml  setup.cfg  setup_shell.sh
configs/mw_image_dense/: cpl.yaml  cpl_bc.yaml  cpl_kl.yaml  piql.yaml  sft.yaml
configs/mw_image_sparse/: cpl.yaml  cpl_bc.yaml  cpl_kl.yaml  piql.yaml  sft.yaml
configs/mw_state_dense/: cpl.yaml  cpl_bc.yaml  cpl_kl.yaml  piql.yaml  sft.yaml
configs/mw_state_sparse/: cpl.yaml  cpl_bc.yaml  cpl_kl.yaml  piql.yaml  sft.yaml
configs/oracle/: percent_bc.yaml  sac.yaml
research/: __init__.py
research/algs/: __init__.py  base.py  bc.py  cpl.py  cpl_kl.py  off_policy_algorithm.py  piql.py  sac.py
research/datasets/: __init__.py  feedback_buffer.py
research/datasets/replay_buffer/: buffer.py  sampling.py  storage.py
research/envs/: __init__.py  base.py  metaworld.py
research/networks/: __init__.py  base.py  common.py  drqv2.py  mlp.py
research/processors/: __init__.py  base.py  image_augmentation.py
research/utils/: config.py  evaluate.py  logger.py  plotter.py  runners.py  schedules.py  trainer.py  utils.py
scripts/: add_pref_labels.py  create_comparison_dataset.py  create_dataset.py  create_percent_bc_datasets.py  evaluate.py  plot.py  render_metaworld_dataset.py  train.py
tools/: cleanup.py  parse_sweep.py  run_local.py  run_slurm.py  utils.py
